# tool-gate

./: .gitignore  .mcp.json  BUG_FIX_INDEXER_INITIALIZATION.md  CHANGELOG.md  README.md  README_CN.md  openspec-progress-report.md  package-lock.json  package.json  pyproject.toml  当前能力治理模型反向梳理.md
.claude-plugin/: plugin.json
config/: default_policy.yaml
docs/: README.md  dev_plan.md  perf_results.md  requirements.md  self_test_runbook.md  session_logging_prompt.md  skill_stage_authoring.md  technical_design.md  开发计划.md  技术方案文档.md  需求文档.md
docs/refer/: Skill-Hub项目准备版.md  之前的对话.md  初版开发计划.md  手写 Skills 长文版.md
examples/: QUICKSTART.md  README.md
examples/01-knowledge-link/: .cleanup_completed  .mcp.json  README.md  start_simulation.sh
examples/02-doc-edit-staged/: .mcp.json  README.md  SETUP_COMPLETE.md  WRITEBACK_SUMMARY.md  agent_simulation_event_log.md  execute_writeback.sh  proposed_update_for_rag-overview-v2.md  start_simulation.sh
examples/03-lifecycle-and-risk/: .mcp.json  README.md  (+1 more)
hooks/: hooks.json
openspec/: config.yaml
scripts/: bench_phase4.py  check-demo-env.sh
tests/: conftest.py  test_cache.py  test_grant_expiry_runtime_view.py  test_grant_manager.py  test_hook_indexer_initialization.py  test_hook_lifecycle.py  test_integration.py  test_mcp_runtime_flow.py  test_models.py  test_observability.py  test_policy_engine.py  test_prompt_composer.py  test_runtime_context.py  test_skill_indexer.py  test_sqlite_store.py  test_stage_governance_integration.py  test_stage_transition_governance.py  test_state_manager.py  test_tool_rewriter.py
(+260 files in other folders)
